--- a/webapp/pages/templates/index.html
+++ b/webapp/pages/templates/index.html
@@ -41,7 +41,7 @@
 
     <img class="map" src="{{url_for('static', filename='map.png')}}" alt="World Map">
 
-    <ul id="list_of_20_races">
+    <ul id="20centuryRace">
     </ul>
 
 </body>
