--- a/webapp/pages/templates/21century.html
+++ b/webapp/pages/templates/21century.html
@@ -27,7 +27,7 @@
         </div>
         <div class="search-container">
             <form action="action_page.php">
-                <input type="text" placeholder="Keyword..." name="search">
+                <input type="text" placeholder="Keyword for Race..." name="search">
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </div>
