--- a/webapp/pages/templates/index.html
+++ b/webapp/pages/templates/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="search-container">
             <form action="action_page.php">
-                <input type="text" placeholder="Keyword..." name="search">
+                <input type="text" placeholder="Keyword for Race..." name="search">
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </div>
@@ -41,8 +41,6 @@
 
     <img class="map" src="{{url_for('static', filename='map.png')}}" alt="World Map">
 
-    <ul id="20centuryRace">
-    </ul>
 
 </body>
 
