--- a/webapp/pages/templates/race.html
+++ b/webapp/pages/templates/race.html
@@ -29,7 +29,7 @@
 
         <div class="search-container">
             <form>
-                <input type="text" placeholder="Keyword..." name="search">
+                <input type="text" placeholder="Keyword for Race..." name="search">
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </div>
