--- a/webapp/pages/templates/top_driver.html
+++ b/webapp/pages/templates/top_driver.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" type="text/css" />
+    <link rel="stylesheet" href="{{url_for('static', filename='chartist.min.css')}}">
     <script type="text/javascript" src="{{ url_for('static', filename='webapp.js') }}"></script>
+
+    <script type="text/javascript" src="{{ url_for('static', filename='topdriver.js') }}"></script>
     <title>Formula 1 Data Summary Home</title>
 </head>
+<style>
+    .sample-chart-container {
+        display: inline-block;
+        border: 2px gray;
+        width: 60%;
+        margin: 30px;
+        padding-bottom: 50px;
+    }
+    
+    .ct-series-a .ct-line {
+        stroke: orange;
+    }
+    
+    .ct-series-a .ct-point {
+        stroke: gray;
+    }
+    
+    .ct-series-b .ct-line {
+        stroke: blue;
+    }
+    
+    .ct-series-b .ct-point {
+        stroke: black;
+    }
+    
+    .ct-series-a .ct-bar {
+        stroke: #bb1111;
+        stroke-width: 20px;
+    }
+    
+    .ct-series-b .ct-bar {
+        stroke: #1111bb;
+        stroke-width: 20px;
+    }
+    
+    .chart-title {
+        text-align: center;
+        width: 100%;
+        font-size: 36pt;
+    }
+</style>
 
 <body>
     <h1>Formula 1
@@ -42,7 +86,12 @@
             <option value="50">Top 50</option>
         </select>
     </div>
-
+    <div class="sample-chart-container">
+        <div class="chart-title">To be implemented</div>
+        <div class="ct-chart ct-perfect-fourth" id="sample-line-chart"></div>
+    </div>
+    <script type="text/javascript" src="{{ url_for('static', filename='chartist.min.js') }}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
 </body>
