--- a/webapp/pages/templates/index.html
+++ b/webapp/pages/templates/index.html
@@ -37,14 +37,8 @@
             </form>
         </div>
     </div>
-    <br>
-    <br>
     <h2>Formula 1, the highest class of international single-seat auto racing. </h2>
-    <br>
-    <br>
-
-    <ul id="20centuryRace">
-    </ul>
+    <h3>Click on any country to get drivers and races!</h3>
 
     <div id="world_map"></div>
 
