--- a/webapp/pages/templates/20century.html
+++ b/webapp/pages/templates/20century.html
@@ -32,11 +32,10 @@
             </form>
         </div>
     </div>
-    <br>
     <h2>Races in 20th Century</h2>
 
-    <ul id="20centuryRace">
-    </ul>
+    <table class="twentieth_race_table" id="20centuryRace">
+    </table>
 
 
 
