--- a/webapp/pages/templates/index.html
+++ b/webapp/pages/templates/index.html
@@ -37,14 +37,15 @@
             </form>
         </div>
     </div>
+
+    <div id="world_map"></div>
     <h2>Formula 1, the highest class of international single-seat auto racing. </h2>
     <h3>Click on any country to get drivers and races!</h3>
 
-    <div id="world_map"></div>
 
-    <div id="country_race"></div>
+    <table class="country_race_table" id="country_race"></table>
 
-    <div id="country_driver"></div>
+    <table class="country_driver_table" id="country_driver"></table>
 
 
 
