--- a/webapp/pages/templates/top_driver.html
+++ b/webapp/pages/templates/top_driver.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" type="text/css" />
     <link rel="stylesheet" href="{{url_for('static', filename='chartist.min.css')}}">
     <script type="text/javascript" src="{{ url_for('static', filename='webapp.js') }}"></script>
-    <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-
-    <script type="text/javascript" src="{{ url_for('static', filename='topdriver.js') }}"></script>
-    <title>Formula 1 Data Summary Home</title>
 </head>
 <style>
     .sample-chart-container {
@@ -55,6 +51,7 @@
 </style>
 
 <body>
+    <title>Formula 1 Data Summary Home</title>
     <h1>Formula 1
         <span class="smaller">Data Summary</span>
     </h1>
@@ -87,13 +84,14 @@
             <option value="50">Top 50</option>
         </select>
     </div>
-    <div id="chartContainer" style="height: 300px; width: 100%;"></div>
     <div class="sample-chart-container">
-        <div class="chart-title">To be implemented</div>
-        <div class="ct-chart ct-perfect-fourth" id="sample-line-chart"></div>
+        <div class="chart-title">A Bar Chart</div>
+        <div class="ct-chart ct-perfect-fourth" id="sample-bar-chart"></div>
     </div>
-    <script type="text/javascript" src="{{ url_for('static', filename='chartist.min.js') }}"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='topdriver.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='chartist.min.js') }}"></script>
 
 
 </body>
