--- a/webapp/pages/templates/index.html
+++ b/webapp/pages/templates/index.html
@@ -42,10 +42,12 @@
     <h2>Formula 1, the highest class of international single-seat auto racing. </h2>
     <h3>Click on any country to get drivers and races!</h3>
 
+    <div class="table_container">
 
-    <table class="country_race_table" id="country_race"></table>
+        <table id="country_driver"></table>
+        <table id="country_race"></table>
 
-    <table class="country_driver_table" id="country_driver"></table>
+    </div>
 
 
 
