--- a/webapp/pages/templates/20century.html
+++ b/webapp/pages/templates/20century.html
@@ -32,7 +32,9 @@
             </form>
         </div>
     </div>
-    <h2>Races in 20th Century</h2>
+    <h2>Races in 20th Century
+        <span class="smaller">Click on the race name to get more information!</span>
+    </h2>
 
     <table class="twentieth_race_table" id="20centuryRace">
     </table>
