--- a/webapp/pages/templates/index.html
+++ b/webapp/pages/templates/index.html
@@ -3,24 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}" />
     <script type="text/javascript" src="{{ url_for('static', filename='webapp.js')}}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='d3.min.js')}}"></script>
     <script typr="text/javascript" src="{{ url_for('static', filename='topojson.min.js')}}"></script>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></link>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></link> -->
     <script type="text/javascript" src="{{url_for('static', filename='datamaps.world.min.js')}}"></script>
     <title>Formula 1 Data Summary Home</title>
 </head>
 
 <body>
-    <h1>Formula 1
+    <h1>
+        <a id="title" href="index.html">Formula 1</a>
         <span class="smaller">Data Summary</span>
     </h1>
     <div class="navbar">
         <a href="index.html">Home</a>
-
         <a href="top_driver.html">Driver</a>
 
         <div class="dropdown">
@@ -31,25 +28,21 @@
             </div>
 
         </div>
-        <div class="instruction"><i><strong>CLICK</strong> on any country and <strong>SCROLL DOWN!!</strong> Guess which country has drivers and races!</i></div>
-        <!-- <li class="instruction">Click on any country and scroll down to get drivers and races!</li> -->
-        <div class="search-container">
-            <form action="" id="country-form">
-                <input type="text" id="countryInput" placeholder="Enter Country Name..." name="search">
-                <button type="submit" id="searchButton"><i class="fa fa-search"></i></button>
-            </form>
+
+        <div class="instruction">
+            <i><strong>CLICK</strong> on any country and 
+                <strong>SCROLL DOWN!!</strong> Guess which country has drivers and races!</i>
         </div>
     </div>
+
     <div id="world_map">
     </div>
     <br>
     <h2>Formula 1, the highest class of international single-seat auto racing. </h2>
     <br>
     <div class="table_container">
-
         <table id="country_driver"></table>
         <table id="country_race"></table>
-
     </div>
 
 
